gcc/testsuite/obj-c++.dg/syntax-error-4.mm
/* Yet another stray infinite loop... */
/* { dg-do compile } */

@interface t
{
}
- (void)go;
@end
@implementation t
- (void)go
{
        }
} /* { dg-error "stray .\}. between Objective\\-C\\+\\+ methods" } */
@end

